# slurm

./: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  slurm.spec  slurm_ucx_spec.txt
auxdir/: Makefile.in  ltmain.sh  x_ac_pmix.m4  x_ac_ucx.m4
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/lua/: Makefile.in
contribs/mic/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/phpext/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
etc/: Makefile.in
src/: Makefile.in
src/api/: Makefile.am  Makefile.in
src/bcast/: Makefile.in
src/common/: Makefile.am  Makefile.in  eio.c  env.c  forward.c  forward.h  pack.c  pack.h  slurm_protocol_api.c  slurm_protocol_api.h  slurm_protocol_defs.c  slurm_protocol_defs.h  slurm_protocol_interface.h  slurm_protocol_pack.c  slurm_protocol_pack.h  slurm_protocol_socket_implementation.c  ucx.c  ucx.h
src/database/: Makefile.in
src/db_api/: Makefile.in
src/plugins/mpi/pmix/: Makefile.am  Makefile.in  TODO  hellompi.c  mpi_pmix.c  mpi_pmix.h  pmix_agent.c  pmix_agent.h  pmix_client.c  pmix_client.h  pmix_coll.c  pmix_coll.h  pmix_common.h  pmix_db.c  pmix_db.h  pmix_debug.h  pmix_info.c  pmix_info.h  pmix_io.c  pmix_io.h  pmix_msg.c  pmix_msg.h  pmix_server.c  pmix_server.h  pmix_state.c  pmix_state.h  pmix_utils.c  pmix_utils.h  pmixp_agent.c  pmixp_agent.h  pmixp_client.c  pmixp_client.h  pmixp_coll.c  pmixp_coll.h  pmixp_common.h  pmixp_conn.c  pmixp_conn.h  pmixp_db.c  pmixp_db.h  pmixp_dconn.c  (+19 more)
src/plugins/mpi/pmix/node_leader/: Makefile  fileops.c  fileops.h  ln_leader.c
src/plugins/mpi/pmix/tests/: pmix_client.c
src/plugins/tmpdir/: Makefile.am  tmpdir.c
src/sbatch/: Makefile.am  Makefile.in
testsuite/: Makefile.in
(+241 files in other folders)
